--- a/gradle.properties
+++ b/gradle.properties
@@ -8,18 +8,21 @@ mod_version=1.0.2
 # minecraft version
 mc_version=1.19.2
 # Forge Version
-forge_version=43.1.24
+forge_version=43.2.21
 
 # cofh core version
 cofh_core_version=10.2.0
 cofh_core_max_version=10.3.0
+# thermal foundation
+thermal_foundation_version=10.2.0
 # thermal core version
 thermal_core_version=10.2.0
 thermal_core_max_version=10.3.0
+# tools complement version
+tools_version=3.2.0.19
 
 # thermal expansion version
 thermal_expansion_version=10.2.0
 tc_version=3.2.0.19
-ae2_version=12.8.4
 jei_version=11.4.0.274
 curios_version=1.18.2-5.0.7.0
